Simplify global security policy to CORS only
